--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -28,6 +28,7 @@
       "database": "Database", 
       "redis": "Redis",
       "application": "Application",
+      "goaccess": "Analytics",
       "admin_user": "Admin User",
       "review": "Review",
       "complete": "Complete"
@@ -59,8 +60,8 @@
       "host_error": "Please enter a valid hostname or IP address",
       
       "port_label": "Port",
-      "port_placeholder": "5432",
-      "port_help": "PostgreSQL port number (default: 5432, range: 1-65535)",
+      "port_placeholder": "5433",
+      "port_help": "PostgreSQL port number (default: 5433, range: 1-65535)",
       "port_error": "Port must be between 1 and 65535",
       
       "name_label": "Database Name",
@@ -89,8 +90,8 @@
       "host_error": "Please enter a valid hostname or IP address",
       
       "port_label": "Port", 
-      "port_placeholder": "6379",
-      "port_help": "Redis port number (default: 6379, range: 1-65535)",
+      "port_placeholder": "6377",
+      "port_help": "Redis port number (default: 6377, range: 1-65535)",
       "port_error": "Port must be between 1 and 65535",
       
       "password_label": "Password",
@@ -131,6 +132,27 @@
       
       "debug_label": "Enable Debug Mode",
       "debug_help": "Only enable for development environments"
+    },
+    
+    "goaccess": {
+      "title": "Analytics & Monitoring",
+      "description": "Configure GoAccess real-time web analytics. This service provides detailed analysis of your website traffic and visitor behavior.",
+      
+      "enable_label": "Enable GoAccess Analytics",
+      "enable_help": "Real-time web analytics with geographic data visualization",
+      
+      "geo_file_label": "GeoIP Database File",
+      "geo_file_help": "Drop a GeoLite2-City.mmdb file here or click to select",
+      "geo_file_note": "GeoIP database is required for geographic data visualization. Download free GeoLite2-City.mmdb from: ",
+      "download_link": "MaxMind GeoLite2",
+      
+      "select_file": "Select File",
+      "selected_file": "Selected File",
+      "file_size": "File Size",
+      
+      "invalid_file_type": "Please select a valid .mmdb file",
+      "file_too_large": "File size too large. Maximum allowed size is 100MB",
+      "geo_file_required": "GeoIP database file is required when GoAccess is enabled"
     },
     
     "admin": {
