--- a/static/i18n/zh-Hans.json
+++ b/static/i18n/zh-Hans.json
@@ -28,6 +28,7 @@
       "database": "数据库",
       "redis": "Redis缓存",
       "application": "应用程序",
+      "goaccess": "分析服务",
       "admin_user": "管理员用户", 
       "review": "检查配置",
       "complete": "完成"
@@ -59,8 +60,8 @@
       "host_error": "请输入有效的主机名或IP地址",
       
       "port_label": "端口",
-      "port_placeholder": "5432",
-      "port_help": "PostgreSQL 端口号（默认：5432，范围：1-65535）", 
+      "port_placeholder": "5433",
+      "port_help": "PostgreSQL 端口号（默认：5433，范围：1-65535）", 
       "port_error": "端口必须在 1 到 65535 之间",
       
       "name_label": "数据库名称",
@@ -89,8 +90,8 @@
       "host_error": "请输入有效的主机名或IP地址",
       
       "port_label": "端口",
-      "port_placeholder": "6379", 
-      "port_help": "Redis 端口号（默认：6379，范围：1-65535）",
+      "port_placeholder": "6377", 
+      "port_help": "Redis 端口号（默认：6377，范围：1-65535）",
       "port_error": "端口必须在 1 到 65535 之间",
       
       "password_label": "密码",
@@ -131,6 +132,27 @@
       
       "debug_label": "启用调试模式",
       "debug_help": "仅在开发环境中启用"
+    },
+    
+    "goaccess": {
+      "title": "分析与监控",
+      "description": "配置 GoAccess 实时网站分析。此服务提供详细的网站流量和访客行为分析。",
+      
+      "enable_label": "启用 GoAccess 分析",
+      "enable_help": "实时网站分析，支持地理数据可视化",
+      
+      "geo_file_label": "地理IP数据库文件",
+      "geo_file_help": "拖拽 GeoLite2-City.mmdb 文件到此处或点击选择",
+      "geo_file_note": "地理数据可视化需要GeoIP数据库。免费下载 GeoLite2-City.mmdb：",
+      "download_link": "MaxMind GeoLite2",
+      
+      "select_file": "选择文件",
+      "selected_file": "已选择文件",
+      "file_size": "文件大小",
+      
+      "invalid_file_type": "请选择有效的 .mmdb 文件",
+      "file_too_large": "文件大小过大。最大允许大小为100MB",
+      "geo_file_required": "启用 GoAccess 时必须上传 GeoIP 数据库文件"
     },
     
     "admin": {
