--- a/static/i18n/zh-Hans.json
+++ b/static/i18n/zh-Hans.json
@@ -16,7 +16,8 @@
     "ok": "确定",
     "close": "关闭",
     "confirm": "确认",
-    "retry": "重试"
+    "retry": "重试",
+    "testing": "测试中..."
   },
   
   "setup": {
@@ -83,7 +84,10 @@
       "password_label": "密码",
       "password_placeholder": "输入数据库密码",
       "password_help": "12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
-      "password_error": "数据库密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）"
+      "password_error": "数据库密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
+      
+      "test_connection": "测试连接",
+      "test_connection_help": "使用当前设置测试数据库连接（仅适用于外部服务）"
     },
     
     "redis": {
@@ -109,7 +113,10 @@
       "password_label": "密码",
       "password_placeholder": "输入 Redis 密码",
       "password_help": "12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
-      "password_error": "Redis 密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）"
+      "password_error": "Redis 密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
+      
+      "test_connection": "测试连接",
+      "test_connection_help": "使用当前设置测试 Redis 连接（仅适用于外部服务）"
     },
     
     "app": {
