--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -73,5 +73,54 @@
     "validation.smtp.connection_failed": "Failed to connect to SMTP server",
     "validation.smtp.auth_failed": "SMTP authentication failed",
     "messages.errors.failed_check_status": "Failed to check setup status",
-    "messages.errors.setup_already_completed": "Setup has already been completed"
+    "messages.errors.setup_already_completed": "Setup has already been completed",
+    "messages.failed_get_setup_status": "Failed to get setup status",
+    "messages.configuration_validation_failed": "Configuration validation failed",
+    "messages.failed_get_configuration": "Failed to get configuration",
+    "messages.configuration_files_generated_successfully": "Configuration files generated successfully",
+    "messages.failed_get_deployment_status": "Failed to get deployment status",
+    "messages.configuration_is_valid": "Configuration is valid",
+    "messages.failed_generate_deployment_id": "Failed to generate deployment ID",
+    "messages.deployment_started": "Deployment started",
+    "messages.deployment_id_required": "Deployment ID required",
+    "messages.streaming_unsupported": "Streaming unsupported",
+    "messages.file_too_large_or_invalid_form_data": "File too large or invalid form data",
+    "messages.no_file_uploaded_or_invalid_file_field": "No file uploaded or invalid file field",
+    "messages.invalid_file_type_mmdb": "Invalid file type. Only .mmdb files are allowed",
+    "messages.file_too_large_max_100mb": "File too large. Maximum size is 100MB",
+    "messages.failed_create_upload_directory": "Failed to create upload directory",
+    "messages.failed_create_destination_file": "Failed to create destination file",
+    "messages.failed_save_file": "Failed to save file",
+    "messages.geoip_file_uploaded_successfully": "GeoIP file uploaded successfully",
+    "messages.invalid_file_type_pem": "Invalid file type. Only .pem files are allowed for JWT private keys",
+    "messages.file_too_large_max_10mb": "File too large. Maximum size is 10MB",
+    "messages.failed_read_file": "Failed to read file",
+    "messages.invalid_jwt_key_file": "Invalid JWT private key file: %v",
+    "messages.jwt_key_file_uploaded_successfully": "JWT key file uploaded successfully",
+    "messages.testing_connections": "Testing connections...",
+    "messages.some_connection_tests_failed": "Some connection tests failed",
+    "messages.all_connection_tests_passed": "All connection tests passed",
+    "messages.initializing_deployment": "Initializing deployment...",
+    "messages.starting_docker_compose": "Starting Docker Compose...",
+    "messages.docker_services_started_checking_health": "Docker services started, checking health...",
+    "messages.starting_health_check_timeout": "Starting health check (timeout: 2 minutes)...",
+    "messages.health_check_attempt": "Health check attempt %d (elapsed: %.0fs/120s)...",
+    "messages.health_checking_seconds": "Health checking... (%d/%d seconds)",
+    "messages.checking_container_status": "Checking container status...",
+    "messages.container_status_all_running": "Container status: All containers are running",
+    "messages.testing_service_connectivity": "Testing service connectivity...",
+    "messages.failed_get_configuration_connectivity": "Failed to get configuration for connectivity test",
+    "messages.connectivity_failed": "%s connectivity failed: %s",
+    "messages.connectivity_ok": "%s connectivity: OK",
+    "messages.all_health_checks_passed": "All health checks passed! Deployment completed successfully.",
+    "messages.health_check_timeout": "Health check timeout after 2 minutes",
+    "messages.services_may_still_be_starting": "💡 Services may still be starting. You can:",
+    "messages.check_logs_command": "1. Check logs: docker-compose -f docker-compose.production.yml logs",
+    "messages.check_status_command": "2. Check status: docker-compose -f docker-compose.production.yml ps",
+    "messages.wait_longer_message": "3. Wait a bit longer - some services need more time to initialize",
+    "messages.deployment_timeout": "Deployment timeout - services may still be starting",
+    "messages.performing_post_deployment_health_checks": "Performing post-deployment health checks...",
+    "messages.some_services_failed_health_check": "Some services failed health check",
+    "messages.all_services_are_healthy": "All services are healthy",
+    "messages.setup_completed_service_available": "Setup completed successfully - service remains available for updates"
 }
