--- a/internal/i18n/json/zh-Hans.json
+++ b/internal/i18n/json/zh-Hans.json
@@ -73,5 +73,54 @@
     "validation.smtp.connection_failed": "连接SMTP服务器失败",
     "validation.smtp.auth_failed": "SMTP身份验证失败",
     "messages.errors.failed_check_status": "检查设置状态失败",
-    "messages.errors.setup_already_completed": "设置已完成"
+    "messages.errors.setup_already_completed": "设置已完成",
+    "messages.failed_get_setup_status": "获取设置状态失败",
+    "messages.configuration_validation_failed": "配置验证失败",
+    "messages.failed_get_configuration": "获取配置失败",
+    "messages.configuration_files_generated_successfully": "配置文件生成成功",
+    "messages.failed_get_deployment_status": "获取部署状态失败",
+    "messages.configuration_is_valid": "配置有效",
+    "messages.failed_generate_deployment_id": "生成部署ID失败",
+    "messages.deployment_started": "部署已启动",
+    "messages.deployment_id_required": "需要部署ID",
+    "messages.streaming_unsupported": "不支持流式传输",
+    "messages.file_too_large_or_invalid_form_data": "文件过大或表单数据无效",
+    "messages.no_file_uploaded_or_invalid_file_field": "未上传文件或文件字段无效",
+    "messages.invalid_file_type_mmdb": "无效文件类型。仅允许 .mmdb 文件",
+    "messages.file_too_large_max_100mb": "文件过大。最大允许大小为100MB",
+    "messages.failed_create_upload_directory": "创建上传目录失败",
+    "messages.failed_create_destination_file": "创建目标文件失败",
+    "messages.failed_save_file": "保存文件失败",
+    "messages.geoip_file_uploaded_successfully": "GeoIP 文件上传成功",
+    "messages.invalid_file_type_pem": "无效文件类型。仅允许用于JWT私钥的 .pem 文件",
+    "messages.file_too_large_max_10mb": "文件过大。最大允许大小为10MB",
+    "messages.failed_read_file": "读取文件失败",
+    "messages.invalid_jwt_key_file": "无效的JWT私钥文件：%v",
+    "messages.jwt_key_file_uploaded_successfully": "JWT密钥文件上传成功",
+    "messages.testing_connections": "正在测试连接...",
+    "messages.some_connection_tests_failed": "部分连接测试失败",
+    "messages.all_connection_tests_passed": "所有连接测试通过",
+    "messages.initializing_deployment": "正在初始化部署...",
+    "messages.starting_docker_compose": "正在启动Docker Compose...",
+    "messages.docker_services_started_checking_health": "Docker服务已启动，正在检查健康状态...",
+    "messages.starting_health_check_timeout": "开始健康检查（超时：2分钟）...",
+    "messages.health_check_attempt": "健康检查尝试 %d（已用时间：%.0fs/120s）...",
+    "messages.health_checking_seconds": "健康检查中...（%d/%d秒）",
+    "messages.checking_container_status": "正在检查容器状态...",
+    "messages.container_status_all_running": "容器状态：所有容器都在运行",
+    "messages.testing_service_connectivity": "正在测试服务连通性...",
+    "messages.failed_get_configuration_connectivity": "获取连通性测试配置失败",
+    "messages.connectivity_failed": "%s 连通性失败：%s",
+    "messages.connectivity_ok": "%s 连通性：正常",
+    "messages.all_health_checks_passed": "所有健康检查通过！部署成功完成。",
+    "messages.health_check_timeout": "健康检查2分钟后超时",
+    "messages.services_may_still_be_starting": "💡 服务可能仍在启动中。您可以：",
+    "messages.check_logs_command": "1. 检查日志：docker-compose -f docker-compose.production.yml logs",
+    "messages.check_status_command": "2. 检查状态：docker-compose -f docker-compose.production.yml ps",
+    "messages.wait_longer_message": "3. 再等待一会儿 - 某些服务需要更多时间来初始化",
+    "messages.deployment_timeout": "部署超时 - 服务可能仍在启动中",
+    "messages.performing_post_deployment_health_checks": "正在执行部署后健康检查...",
+    "messages.some_services_failed_health_check": "部分服务健康检查失败",
+    "messages.all_services_are_healthy": "所有服务都很健康",
+    "messages.setup_completed_service_available": "设置成功完成 - 服务保持可用以进行更新"
 }
