chore: page title translation

--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -1,4 +1,5 @@
 {
+    "setup.page_title": "BakLab Setup",
     "common.next": "Next",
     "common.previous": "Previous",
     "common.save": "Save",
